HelpDesk/force-app/main/default/objects/HelpDesk_Ticket__c/HelpDesk_Ticket__c.object-meta.xml
<CustomObject>
    <label>Help Desk Ticket</label>
    <nameField>
        <displayFormat>HDT-{00000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Desk Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>