HelpDesk/force-app/main/default/objects/HelpDesk_Ticket__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_300))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base URL</label>
    <type>Text</type>
</CustomField>