HelpDesk/force-app/main/default/objects/HelpDesk_Ticket__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>