HelpDesk/force-app/main/default/objects/HelpDesk_Ticket__c/fields/CreatedBy_Email__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedBy Email</label>
    <type>Text</type>
</CustomField>